--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -24,21 +24,37 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="form3Example1c" class="form-control" name="name" placeholder="Enter your Name" required/>
+                            <input type="text" id="form3Example1c" class="form-control" name="name" value="Vipin PP" placeholder="Enter your Name" required/>
                           </div>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="email" id="form3Example3c" class="form-control" name="email" placeholder="Enter your Email" required/>
+                            <input type="email" id="form3Example3c" class="form-control" name="email" value="vipindas101110@gmail.com" placeholder="Enter your Email" required/>
+                          </div>
+                        </div>
+
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="number" id="form3Example3c" class="form-control" name="phone" 
+                            value="+919735267899" placeholder="Enter your Number" required/>
                           </div>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="form3Example4c" class="form-control" name="password" placeholder="Enter your Password" required/>
+                            <input type="password" id="form3Example4c" class="form-control" name="password" 
+                            value="Vipin@333444"   placeholder="Enter your Password" required/>
+                          </div>
+                        </div>
+
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="password" id="form3Example3c" class="form-control" name="password_confirm" value="Vipin@333444"  placeholder="Confirm  your Password" required/>
                           </div>
                         </div>
       
